--- a/original/demos/templates/index.html
+++ b/original/demos/templates/index.html
@@ -23,7 +23,7 @@
           <a class="nav-link active" aria-current="page" href="#">Reset</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Download SVGs</a>
+          <a class="nav-link disabled" id="download-btn" download="output/latest.svg" aria-disabled="true">Download SVGs</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
